# pokeemerald

./: CMakeLists.txt  charmap.txt
data/: unknown_serial_data.s
data/text/: birch_speech.inc
gflib/: text.c
src/: strings.c
