cmake_minimum_required(VERSION 3.20)
project(pokeemerald_ch)

set(CMAKE_CXX_STANDARD 14)

include_directories(gflib)
include_directories(include)
include_directories(include/constants)
include_directories(include/gba)
include_directories(src/data)
include_directories(src/data/bard_music)
include_directories(src/data/battle_frontier)
include_directories(src/data/decoration)
include_directories(src/data/easy_chat)
include_directories(src/data/field_effects)
include_directories(src/data/graphics)
include_directories(src/data/object_events)
include_directories(src/data/pokemon)
include_directories(src/data/pokemon_graphics)
include_directories(src/data/region_map)
include_directories(src/data/text)
include_directories(src/data/trainer_graphics)
include_directories(tools/gbafix)
include_directories(tools/gbagfx)
include_directories(tools/jsonproc)
include_directories(tools/jsonproc/nlohmann)
include_directories(tools/mapjson)
include_directories(tools/mid2agb)
include_directories(tools/preproc)
include_directories(tools/ramscrgen)
include_directories(tools/rsfont)
include_directories(tools/scaninc)

add_executable(pokeemerald_ch
        gflib/bg.c
        gflib/bg.h
        gflib/blit.c
        gflib/blit.h
        gflib/dma3.h
        gflib/dma3_manager.c
        gflib/gpu_regs.c
        gflib/gpu_regs.h
        gflib/io_reg.c
        gflib/io_reg.h
        gflib/malloc.c
        gflib/malloc.h
        gflib/sprite.c
        gflib/sprite.h
        gflib/string_util.c
        gflib/string_util.h
        gflib/text.c
        gflib/text.h
        gflib/window.c
        gflib/window.h
        include/constants/abilities.h
        include/constants/apprentice.h
        include/constants/battle.h
        include/constants/battle_ai.h
        include/constants/battle_anim.h
        include/constants/battle_arena.h
        include/constants/battle_dome.h
        include/constants/battle_factory.h
        include/constants/battle_frontier.h
        include/constants/battle_frontier_mons.h
        include/constants/battle_frontier_trainers.h
        include/constants/battle_move_effects.h
        include/constants/battle_palace.h
        include/constants/battle_pike.h
        include/constants/battle_pyramid.h
        include/constants/battle_script_commands.h
        include/constants/battle_setup.h
        include/constants/battle_string_ids.h
        include/constants/battle_tent.h
        include/constants/battle_tent_mons.h
        include/constants/battle_tent_trainers.h
        include/constants/battle_tower.h
        include/constants/berry.h
        include/constants/cable_club.h
        include/constants/coins.h
        include/constants/contest.h
        include/constants/daycare.h
        include/constants/decorations.h
        include/constants/easy_chat.h
        include/constants/event_bg.h
        include/constants/event_object_movement.h
        include/constants/event_objects.h
        include/constants/field_effects.h
        include/constants/field_poison.h
        include/constants/field_specials.h
        include/constants/field_tasks.h
        include/constants/field_weather.h
        include/constants/flags.h
        include/constants/frontier_util.h
        include/constants/game_stat.h
        include/constants/global.h
        include/constants/heal_locations.h
        include/constants/hold_effects.h
        include/constants/item.h
        include/constants/item_effects.h
        include/constants/items.h
        include/constants/layouts.h
        include/constants/lilycove_lady.h
        include/constants/map_groups.h
        include/constants/map_scripts.h
        include/constants/map_types.h
        include/constants/maps.h
        include/constants/mauville_old_man.h
        include/constants/metatile_behaviors.h
        include/constants/metatile_labels.h
        include/constants/mevent.h
        include/constants/moves.h
        include/constants/opponents.h
        include/constants/party_menu.h
        include/constants/pokemon.h
        include/constants/region_map_sections.h
        include/constants/rgb.h
        include/constants/roulette.h
        include/constants/script_menu.h
        include/constants/secret_bases.h
        include/constants/slot_machine.h
        include/constants/songs.h
        include/constants/species.h
        include/constants/trade.h
        include/constants/trainer_hill.h
        include/constants/trainer_types.h
        include/constants/trainers.h
        include/constants/tv.h
        include/constants/union_room.h
        include/constants/vars.h
        include/constants/weather.h
        include/gba/defines.h
        include/gba/flash_internal.h
        include/gba/gba.h
        include/gba/io_reg.h
        include/gba/isagbprint.h
        include/gba/m4a_internal.h
        include/gba/macro.h
        include/gba/multiboot.h
        include/gba/syscall.h
        include/gba/types.h
        include/agb_flash.h
        include/AgbRfu_LinkManager.h
        include/apprentice.h
        include/bard_music.h
        include/battle.h
        include/battle_ai_script_commands.h
        include/battle_ai_switch_items.h
        include/battle_anim.h
        include/battle_arena.h
        include/battle_bg.h
        include/battle_controllers.h
        include/battle_dome.h
        include/battle_factory.h
        include/battle_factory_screen.h
        include/battle_gfx_sfx_util.h
        include/battle_interface.h
        include/battle_main.h
        include/battle_message.h
        include/battle_pike.h
        include/battle_pyramid.h
        include/battle_pyramid_bag.h
        include/battle_records.h
        include/battle_script_commands.h
        include/battle_scripts.h
        include/battle_setup.h
        include/battle_tent.h
        include/battle_tower.h
        include/battle_transition.h
        include/battle_transition_frontier.h
        include/battle_tv.h
        include/battle_util.h
        include/battle_util2.h
        include/berry.h
        include/berry_blender.h
        include/berry_crush.h
        include/berry_fix_program.h
        include/berry_powder.h
        include/berry_tag_screen.h
        include/bike.h
        include/braille_puzzles.h
        include/cable_club.h
        include/clear_save_data_menu.h
        include/clock.h
        include/coins.h
        include/confetti_util.h
        include/config.h
        include/contest.h
        include/contest_ai.h
        include/contest_effect.h
        include/contest_link.h
        include/contest_painting.h
        include/contest_util.h
        include/coord_event_weather.h
        include/credits.h
        include/crt0.h
        include/data.h
        include/daycare.h
        include/decompress.h
        include/decoration.h
        include/decoration_inventory.h
        include/dewford_trend.h
        include/digit_obj_util.h
        include/diploma.h
        include/dodrio_berry_picking.h
        include/dynamic_placeholder_text_util.h
        include/easy_chat.h
        include/egg_hatch.h
        include/ereader_helpers.h
        include/ereader_screen.h
        include/event_data.h
        include/event_object_lock.h
        include/event_object_movement.h
        include/event_scripts.h
        include/evolution_graphics.h
        include/evolution_scene.h
        include/faraway_island.h
        include/field_camera.h
        include/field_control_avatar.h
        include/field_door.h
        include/field_effect.h
        include/field_effect_helpers.h
        include/field_message_box.h
        include/field_player_avatar.h
        include/field_poison.h
        include/field_screen_effect.h
        include/field_special_scene.h
        include/field_specials.h
        include/field_tasks.h
        include/field_weather.h
        include/fieldmap.h
        include/fldeff.h
        include/fldeff_misc.h
        include/frontier_pass.h
        include/frontier_util.h
        include/global.berry.h
        include/global.fieldmap.h
        include/global.h
        include/global.tv.h
        include/graphics.h
        include/gym_leader_rematch.h
        include/hall_of_fame.h
        include/heal_location.h
        include/image_processing_effects.h
        include/international_string_util.h
        include/intro.h
        include/intro_credits_graphics.h
        include/item.h
        include/item_icon.h
        include/item_menu.h
        include/item_menu_icons.h
        include/item_use.h
        include/landmark.h
        include/libgcnmultiboot.h
        include/librfu.h
        include/lilycove_lady.h
        include/link.h
        include/link_rfu.h
        include/list_menu.h
        include/load_save.h
        include/lottery_corner.h
        include/m4a.h
        include/mail.h
        include/main.h
        include/main_menu.h
        include/map_name_popup.h
        include/match_call.h
        include/math_util.h
        include/mauville_old_man.h
        include/menu.h
        include/menu_helpers.h
        include/menu_specialized.h
        include/metatile_behavior.h
        include/mevent.h
        include/mevent2.h
        include/mevent_801BAAC.h
        include/mevent_client.h
        include/mevent_news.h
        include/mevent_server.h
        include/mevent_server_helpers.h
        include/minigame_countdown.h
        include/mirage_tower.h
        include/mon_markings.h
        include/money.h
        include/move_relearner.h
        include/multiboot.h
        include/multiboot_pokemon_colosseum.h
        include/mystery_event_menu.h
        include/mystery_event_msg.h
        include/mystery_event_script.h
        include/mystery_gift.h
        include/naming_screen.h
        include/new_game.h
        include/option_menu.h
        include/overworld.h
        include/palette.h
        include/palette_util.h
        include/party_menu.h
        include/pc_screen_effect.h
        include/play_time.h
        include/player_pc.h
        include/pokeball.h
        include/pokeblock.h
        include/pokedex.h
        include/pokedex_area_region_map.h
        include/pokedex_area_screen.h
        include/pokedex_cry_screen.h
        include/pokemon.h
        include/pokemon_animation.h
        include/pokemon_icon.h
        include/pokemon_jump.h
        include/pokemon_size_record.h
        include/pokemon_storage_system.h
        include/pokemon_summary_screen.h
        include/pokenav.h
        include/random.h
        include/rayquaza_scene.h
        include/record_mixing.h
        include/recorded_battle.h
        include/region_map.h
        include/reset_rtc_screen.h
        include/reset_save_heap.h
        include/reshow_battle_screen.h
        include/roamer.h
        include/rotating_gate.h
        include/rotating_tile_puzzle.h
        include/roulette.h
        include/rtc.h
        include/safari_zone.h
        include/save.h
        include/save_location.h
        include/scanline_effect.h
        include/script.h
        include/script_menu.h
        include/script_movement.h
        include/script_pokemon_util.h
        include/secret_base.h
        include/shop.h
        include/siirtc.h
        include/slot_machine.h
        include/sound.h
        include/start_menu.h
        include/starter_choose.h
        include/strings.h
        include/task.h
        include/text_window.h
        include/tileset_anims.h
        include/tilesets.h
        include/time_events.h
        include/title_screen.h
        include/trade.h
        include/trader.h
        include/trainer_card.h
        include/trainer_hill.h
        include/trainer_pokemon_sprites.h
        include/trainer_see.h
        include/trig.h
        include/tv.h
        include/union_room.h
        include/union_room_battle.h
        include/union_room_chat.h
        include/union_room_player_avatar.h
        include/util.h
        include/walda_phrase.h
        include/wallclock.h
        include/wild_encounter.h
        src/data/bard_music/actions.h
        src/data/bard_music/adjectives.h
        src/data/bard_music/bard_sounds.h
        src/data/bard_music/battle.h
        src/data/bard_music/conditions.h
        src/data/bard_music/default_sound.h
        src/data/bard_music/endings.h
        src/data/bard_music/events.h
        src/data/bard_music/feelings.h
        src/data/bard_music/greetings.h
        src/data/bard_music/hobbies.h
        src/data/bard_music/length_table.h
        src/data/bard_music/lifestyle.h
        src/data/bard_music/misc.h
        src/data/bard_music/moves.h
        src/data/bard_music/people.h
        src/data/bard_music/pokemon.h
        src/data/bard_music/speech.h
        src/data/bard_music/status.h
        src/data/bard_music/time.h
        src/data/bard_music/trainer.h
        src/data/bard_music/trendysaying.h
        src/data/bard_music/voices.h
        src/data/bard_music/word_pitch.h
        src/data/battle_frontier/apprentice.h
        src/data/battle_frontier/battle_frontier_exchange_corner.h
        src/data/battle_frontier/battle_frontier_mons.h
        src/data/battle_frontier/battle_frontier_trainer_mons.h
        src/data/battle_frontier/battle_frontier_trainers.h
        src/data/battle_frontier/battle_pyramid_level_50_wild_mons.h
        src/data/battle_frontier/battle_pyramid_open_level_wild_mons.h
        src/data/battle_frontier/battle_tent.h
        src/data/battle_frontier/trainer_hill.h
        src/data/decoration/description.h
        src/data/decoration/header.h
        src/data/decoration/icon.h
        src/data/decoration/tilemaps.h
        src/data/decoration/tiles.h
        src/data/easy_chat/easy_chat_group_actions.h
        src/data/easy_chat/easy_chat_group_adjectives.h
        src/data/easy_chat/easy_chat_group_battle.h
        src/data/easy_chat/easy_chat_group_conditions.h
        src/data/easy_chat/easy_chat_group_endings.h
        src/data/easy_chat/easy_chat_group_events.h
        src/data/easy_chat/easy_chat_group_feelings.h
        src/data/easy_chat/easy_chat_group_greetings.h
        src/data/easy_chat/easy_chat_group_hobbies.h
        src/data/easy_chat/easy_chat_group_lifestyle.h
        src/data/easy_chat/easy_chat_group_misc.h
        src/data/easy_chat/easy_chat_group_move_1.h
        src/data/easy_chat/easy_chat_group_move_2.h
        src/data/easy_chat/easy_chat_group_people.h
        src/data/easy_chat/easy_chat_group_pokemon.h
        src/data/easy_chat/easy_chat_group_pokemon2.h
        src/data/easy_chat/easy_chat_group_speech.h
        src/data/easy_chat/easy_chat_group_status.h
        src/data/easy_chat/easy_chat_group_time.h
        src/data/easy_chat/easy_chat_group_trainer.h
        src/data/easy_chat/easy_chat_group_trendy_saying.h
        src/data/easy_chat/easy_chat_group_voices.h
        src/data/easy_chat/easy_chat_groups.h
        src/data/easy_chat/easy_chat_words_by_letter.h
        src/data/field_effects/field_effect_object_template_pointers.h
        src/data/field_effects/field_effect_objects.h
        src/data/graphics/battle_terrain.h
        src/data/graphics/berries.h
        src/data/graphics/berry_fix.h
        src/data/graphics/decorations.h
        src/data/graphics/interface_pokeballs.h
        src/data/graphics/intro_scene.h
        src/data/graphics/items.h
        src/data/graphics/mail.h
        src/data/graphics/pokemon.h
        src/data/graphics/rayquaza_scene.h
        src/data/graphics/slot_machine.h
        src/data/graphics/trainers.h
        src/data/object_events/base_oam.h
        src/data/object_events/berry_tree_graphics_tables.h
        src/data/object_events/movement_action_func_tables.h
        src/data/object_events/movement_type_func_tables.h
        src/data/object_events/object_event_anims.h
        src/data/object_events/object_event_graphics.h
        src/data/object_events/object_event_graphics_info.h
        src/data/object_events/object_event_graphics_info_pointers.h
        src/data/object_events/object_event_pic_tables.h
        src/data/object_events/object_event_subsprites.h
        src/data/pokemon/base_stats.h
        src/data/pokemon/cry_ids.h
        src/data/pokemon/egg_moves.h
        src/data/pokemon/evolution.h
        src/data/pokemon/experience_tables.h
        src/data/pokemon/item_effects.h
        src/data/pokemon/level_up_learnset_pointers.h
        src/data/pokemon/level_up_learnsets.h
        src/data/pokemon/pokedex_entries.h
        src/data/pokemon/pokedex_orders.h
        src/data/pokemon/pokedex_text.h
        src/data/pokemon/tmhm_learnsets.h
        src/data/pokemon/trainer_class_lookups.h
        src/data/pokemon/tutor_learnsets.h
        src/data/pokemon_graphics/back_pic_coordinates.h
        src/data/pokemon_graphics/back_pic_table.h
        src/data/pokemon_graphics/enemy_mon_elevation.h
        src/data/pokemon_graphics/footprint_table.h
        src/data/pokemon_graphics/front_pic_anims.h
        src/data/pokemon_graphics/front_pic_coordinates.h
        src/data/pokemon_graphics/front_pic_table.h
        src/data/pokemon_graphics/palette_table.h
        src/data/pokemon_graphics/shiny_palette_table.h
        src/data/pokemon_graphics/still_front_pic_table.h
        src/data/pokemon_graphics/unknown_anims.h
        src/data/pokemon_graphics/unknown_table.h
        src/data/region_map/city_map_entries.h
        src/data/region_map/city_map_tilemaps.h
        src/data/region_map/region_map_entries.h
        src/data/text/abilities.h
        src/data/text/gift_ribbon_descriptions.h
        src/data/text/item_descriptions.h
        src/data/text/match_call_messages.h
        src/data/text/move_descriptions.h
        src/data/text/move_names.h
        src/data/text/nature_names.h
        src/data/text/ribbon_descriptions.h
        src/data/text/species_names.h
        src/data/text/trainer_class_names.h
        src/data/trainer_graphics/back_pic_anims.h
        src/data/trainer_graphics/back_pic_tables.h
        src/data/trainer_graphics/front_pic_anims.h
        src/data/trainer_graphics/front_pic_tables.h
        src/data/battle_moves.h
        src/data/contest_moves.h
        src/data/contest_opponents.h
        src/data/contest_text_tables.h
        src/data/credits.h
        src/data/heal_locations.h
        src/data/item_icon_table.h
        src/data/items.h
        src/data/lilycove_lady.h
        src/data/party_menu.h
        src/data/pointillism_points.h
        src/data/script_menu.h
        src/data/trade.h
        src/data/trainer_parties.h
        src/data/trainers.h
        src/data/union_room.h
        src/data/wallpapers.h
        src/agb_flash.c
        src/agb_flash_1m.c
        src/agb_flash_le.c
        src/agb_flash_mx.c
        src/AgbRfu_LinkManager.c
        src/anim_mon_front_pics.c
        src/apprentice.c
        src/bard_music.c
        src/battle_ai_script_commands.c
        src/battle_ai_switch_items.c
        src/battle_anim.c
        src/battle_anim_bug.c
        src/battle_anim_dark.c
        src/battle_anim_dragon.c
        src/battle_anim_effects_1.c
        src/battle_anim_effects_2.c
        src/battle_anim_effects_3.c
        src/battle_anim_electric.c
        src/battle_anim_fight.c
        src/battle_anim_fire.c
        src/battle_anim_flying.c
        src/battle_anim_ghost.c
        src/battle_anim_ground.c
        src/battle_anim_ice.c
        src/battle_anim_mon_movement.c
        src/battle_anim_mons.c
        src/battle_anim_normal.c
        src/battle_anim_poison.c
        src/battle_anim_psychic.c
        src/battle_anim_rock.c
        src/battle_anim_smokescreen.c
        src/battle_anim_sound_tasks.c
        src/battle_anim_status_effects.c
        src/battle_anim_throw.c
        src/battle_anim_utility_funcs.c
        src/battle_anim_water.c
        src/battle_arena.c
        src/battle_bg.c
        src/battle_controller_link_opponent.c
        src/battle_controller_link_partner.c
        src/battle_controller_opponent.c
        src/battle_controller_player.c
        src/battle_controller_player_partner.c
        src/battle_controller_recorded_opponent.c
        src/battle_controller_recorded_player.c
        src/battle_controller_safari.c
        src/battle_controller_wally.c
        src/battle_controllers.c
        src/battle_dome.c
        src/battle_factory.c
        src/battle_factory_screen.c
        src/battle_gfx_sfx_util.c
        src/battle_interface.c
        src/battle_intro.c
        src/battle_main.c
        src/battle_message.c
        src/battle_palace.c
        src/battle_pike.c
        src/battle_pyramid.c
        src/battle_pyramid_bag.c
        src/battle_records.c
        src/battle_script_commands.c
        src/battle_setup.c
        src/battle_tent.c
        src/battle_tower.c
        src/battle_transition.c
        src/battle_transition_frontier.c
        src/battle_tv.c
        src/battle_util.c
        src/battle_util2.c
        src/berry.c
        src/berry_blender.c
        src/berry_crush.c
        src/berry_fix_graphics.c
        src/berry_fix_program.c
        src/berry_powder.c
        src/berry_tag_screen.c
        src/bike.c
        src/birch_pc.c
        src/braille_puzzles.c
        src/cable_car.c
        src/cable_club.c
        src/clear_save_data_screen.c
        src/clock.c
        src/coins.c
        src/confetti_util.c
        src/contest.c
        src/contest_ai.c
        src/contest_effect.c
        src/contest_link.c
        src/contest_link_util.c
        src/contest_painting.c
        src/contest_util.c
        src/coord_event_weather.c
        src/credits.c
        src/data.c
        src/daycare.c
        src/decompress.c
        src/decoration.c
        src/decoration_inventory.c
        src/dewford_trend.c
        src/digit_obj_util.c
        src/diploma.c
        src/dodrio_berry_picking.c
        src/dynamic_placeholder_text_util.c
        src/easy_chat.c
        src/egg_hatch.c
        src/ereader_helpers.c
        src/ereader_screen.c
        src/event_data.c
        src/event_object_lock.c
        src/event_object_movement.c
        src/evolution_graphics.c
        src/evolution_scene.c
        src/faraway_island.c
        src/field_camera.c
        src/field_control_avatar.c
        src/field_door.c
        src/field_effect.c
        src/field_effect_helpers.c
        src/field_message_box.c
        src/field_player_avatar.c
        src/field_poison.c
        src/field_region_map.c
        src/field_screen_effect.c
        src/field_special_scene.c
        src/field_specials.c
        src/field_tasks.c
        src/field_weather.c
        src/field_weather_effect.c
        src/fieldmap.c
        src/fldeff_cut.c
        src/fldeff_dig.c
        src/fldeff_escalator.c
        src/fldeff_flash.c
        src/fldeff_misc.c
        src/fldeff_rocksmash.c
        src/fldeff_softboiled.c
        src/fldeff_strength.c
        src/fldeff_sweetscent.c
        src/fldeff_teleport.c
        src/frontier_pass.c
        src/frontier_util.c
        src/graphics.c
        src/gym_leader_rematch.c
        src/hall_of_fame.c
        src/heal_location.c
        src/hof_pc.c
        src/image_processing_effects.c
        src/international_string_util.c
        src/intro.c
        src/intro_credits_graphics.c
        src/item.c
        src/item_icon.c
        src/item_menu.c
        src/item_menu_icons.c
        src/item_use.c
        src/landmark.c
        src/libisagbprn.c
        src/librfu_intr.c
        src/librfu_rfu.c
        src/librfu_sio32id.c
        src/librfu_stwi.c
        src/lilycove_lady.c
        src/link.c
        src/link_rfu_2.c
        src/link_rfu_3.c
        src/list_menu.c
        src/load_save.c
        src/lottery_corner.c
        src/m4a.c
        src/m4a_tables.c
        src/mail.c
        src/mail_data.c
        src/main.c
        src/main_menu.c
        src/map_name_popup.c
        src/match_call.c
        src/math_util.c
        src/mauville_old_man.c
        src/menu.c
        src/menu_helpers.c
        src/menu_specialized.c
        src/metatile_behavior.c
        src/mevent2.c
        src/mevent_801BAAC.c
        src/mevent_client.c
        src/mevent_news.c
        src/mevent_scripts.c
        src/mevent_server.c
        src/mevent_server_helpers.c
        src/minigame_countdown.c
        src/mirage_tower.c
        src/mon_markings.c
        src/money.c
        src/move_relearner.c
        src/multiboot.c
        src/mystery_event_menu.c
        src/mystery_event_msg.c
        src/mystery_event_script.c
        src/mystery_gift.c
        src/naming_screen.c
        src/new_game.c
        src/option_menu.c
        src/overworld.c
        src/palette.c
        src/palette_util.c
        src/party_menu.c
        src/play_time.c
        src/player_pc.c
        src/pokeball.c
        src/pokeblock.c
        src/pokeblock_feed.c
        src/pokedex.c
        src/pokedex_area_region_map.c
        src/pokedex_area_screen.c
        src/pokedex_cry_screen.c
        src/pokemon.c
        src/pokemon_animation.c
        src/pokemon_icon.c
        src/pokemon_jump.c
        src/pokemon_size_record.c
        src/pokemon_storage_system.c
        src/pokemon_summary_screen.c
        src/pokenav.c
        src/pokenav_conditions_1.c
        src/pokenav_conditions_2.c
        src/pokenav_conditions_3.c
        src/pokenav_main_menu.c
        src/pokenav_match_call_1.c
        src/pokenav_match_call_2.c
        src/pokenav_match_call_data.c
        src/pokenav_match_call_ui.c
        src/pokenav_menu_handler_1.c
        src/pokenav_menu_handler_2.c
        src/pokenav_region_map.c
        src/pokenav_ribbons_1.c
        src/pokenav_ribbons_2.c
        src/post_battle_event_funcs.c
        src/random.c
        src/rayquaza_scene.c
        src/record_mixing.c
        src/recorded_battle.c
        src/region_map.c
        src/reset_rtc_screen.c
        src/reset_save_heap.c
        src/reshow_battle_screen.c
        src/roamer.c
        src/rotating_gate.c
        src/rotating_tile_puzzle.c
        src/roulette.c
        src/rtc.c
        src/safari_zone.c
        src/save.c
        src/save_failed_screen.c
        src/save_location.c
        src/scanline_effect.c
        src/scrcmd.c
        src/script.c
        src/script_menu.c
        src/script_movement.c
        src/script_pokemon_util.c
        src/secret_base.c
        src/shop.c
        src/siirtc.c
        src/slot_machine.c
        src/sound.c
        src/start_menu.c
        src/starter_choose.c
        src/strings.c
        src/task.c
        src/text_input_strings.c
        src/text_window.c
        src/tileset_anims.c
        src/time_events.c
        src/title_screen.c
        src/trade.c
        src/trader.c
        src/trainer_card.c
        src/trainer_hill.c
        src/trainer_pokemon_sprites.c
        src/trainer_see.c
        src/trig.c
        src/tv.c
        src/union_room.c
        src/union_room_battle.c
        src/union_room_chat.c
        src/union_room_player_avatar.c
        src/unk_text_util_2.c
        src/use_pokeblock.c
        src/util.c
        src/walda_phrase.c
        src/wallclock.c
        src/wild_encounter.c
        src/wireless_communication_status_screen.c
        tools/aif2pcm/extended.c
        tools/aif2pcm/main.c
        tools/bin2c/bin2c.c
        tools/gbafix/elf.h
        tools/gbafix/gbafix.c
        tools/gbagfx/convert_png.c
        tools/gbagfx/convert_png.h
        tools/gbagfx/font.c
        tools/gbagfx/font.h
        tools/gbagfx/gfx.c
        tools/gbagfx/gfx.h
        tools/gbagfx/global.h
        tools/gbagfx/huff.c
        tools/gbagfx/huff.h
        tools/gbagfx/jasc_pal.c
        tools/gbagfx/jasc_pal.h
        tools/gbagfx/lz.c
        tools/gbagfx/lz.h
        tools/gbagfx/main.c
        tools/gbagfx/options.h
        tools/gbagfx/rl.c
        tools/gbagfx/rl.h
        tools/gbagfx/util.c
        tools/gbagfx/util.h
        tools/jsonproc/nlohmann/json.hpp
        tools/jsonproc/inja.hpp
        tools/jsonproc/jsonproc.cpp
        tools/jsonproc/jsonproc.h
        tools/mapjson/json11.cpp
        tools/mapjson/json11.h
        tools/mapjson/mapjson.cpp
        tools/mapjson/mapjson.h
        tools/mid2agb/agb.cpp
        tools/mid2agb/agb.h
        tools/mid2agb/error.cpp
        tools/mid2agb/error.h
        tools/mid2agb/main.cpp
        tools/mid2agb/main.h
        tools/mid2agb/midi.cpp
        tools/mid2agb/midi.h
        tools/mid2agb/tables.cpp
        tools/mid2agb/tables.h
        tools/preproc/asm_file.cpp
        tools/preproc/asm_file.h
        tools/preproc/c_file.cpp
        tools/preproc/c_file.h
        tools/preproc/char_util.h
        tools/preproc/charmap.cpp
        tools/preproc/charmap.h
        tools/preproc/preproc.cpp
        tools/preproc/preproc.h
        tools/preproc/string_parser.cpp
        tools/preproc/string_parser.h
        tools/preproc/utf8.cpp
        tools/preproc/utf8.h
        tools/ramscrgen/char_util.h
        tools/ramscrgen/elf.cpp
        tools/ramscrgen/elf.h
        tools/ramscrgen/main.cpp
        tools/ramscrgen/ramscrgen.h
        tools/ramscrgen/sym_file.cpp
        tools/ramscrgen/sym_file.h
        tools/rsfont/convert_png.c
        tools/rsfont/convert_png.h
        tools/rsfont/font.c
        tools/rsfont/font.h
        tools/rsfont/gfx.h
        tools/rsfont/global.h
        tools/rsfont/main.c
        tools/rsfont/util.c
        tools/rsfont/util.h
        tools/scaninc/asm_file.cpp
        tools/scaninc/asm_file.h
        tools/scaninc/c_file.cpp
        tools/scaninc/c_file.h
        tools/scaninc/scaninc.cpp
        tools/scaninc/scaninc.h
        tools/scaninc/source_file.cpp
        tools/scaninc/source_file.h)
